@@ -15,7 +15,7 @@ install-stem: vmlinuz
 breaks: xserver-xorg-input-vmmouse (<< 1:13.0.99)
 
 [relations]
-headers%gcc-7: linux-compiler-gcc-7-x86
+headers%gcc-6: linux-compiler-gcc-6-x86
 
 [amd64_description]
 hardware: 64-bit PCs
