@@ -16,7 +16,7 @@ uncompressed-image-file: arch/arm/boot/Image
 install-stem: vmlinuz
 
 [relations]
-headers%gcc-7: linux-compiler-gcc-7-arm
+headers%gcc-6: linux-compiler-gcc-6-arm
 
 [marvell_description]
 hardware: Marvell Kirkwood/Orion
