@@ -99,7 +99,7 @@ arches:
  sparc64
  tilegx
  x32
-compiler: gcc-7
+compiler: gcc-6
 featuresets:
  none
  rt
@@ -124,7 +124,7 @@ recommends: apparmor
 
 [relations]
 # compilers
-gcc-7: gcc-7 <!stage1 !cross>, gcc-7-@gnu-type-package@ <!stage1 cross>
+gcc-6: gcc-6 <!stage1 !cross>, gcc-6-@gnu-type-package@ <!stage1 cross>
 
 # initramfs-generators
 initramfs-fallback: linux-initramfs-tool
