@@ -24,5 +24,5 @@ hardware: multiprocessor 64-bit PA-RISC
 hardware-long: HP PA-RISC 64-bit SMP systems with support for more than 4 GB RAM
 
 [relations]
-gcc-7: gcc-7 <!stage1 !cross>, binutils-hppa64-linux-gnu <!stage1 !cross>, gcc-7-hppa64-linux-gnu <!stage1 !cross>, gcc-7-hppa-linux-gnu <!stage1 cross>, binutils-hppa64-linux-gnu <!stage1 cross>, gcc-7-hppa64-linux-gnu <!stage1 cross>
+gcc-6: gcc-6 <!stage1 !cross>, binutils-hppa64-linux-gnu <!stage1 !cross>, gcc-6-hppa64-linux-gnu <!stage1 !cross>, gcc-6-hppa-linux-gnu <!stage1 cross>, binutils-hppa64-linux-gnu <!stage1 cross>, gcc-6-hppa64-linux-gnu <!stage1 cross>
 
