@@ -12,7 +12,7 @@ bootloaders: s390-tools
 install-stem: vmlinuz
 
 [relations]
-headers%gcc-7: linux-compiler-gcc-7-s390
+headers%gcc-6: linux-compiler-gcc-6-s390
 
 [s390x_build]
 debug-info: true
