@@ -1,24 +1,24 @@
-Package: linux-compiler-gcc-7-arm
+Package: linux-compiler-gcc-6-arm
 Build-Profiles: <!stage1>
-Depends: gcc-7, ${misc:Depends}
+Depends: gcc-6, ${misc:Depends}
 Architecture: armel armhf
 Multi-Arch: foreign
 Description: Compiler for Linux on ARM (meta-package)
  This package depends on gcc 6 of the appropriate architecture for
  Linux on armel and armhf.
 
-Package: linux-compiler-gcc-7-s390
+Package: linux-compiler-gcc-6-s390
 Build-Profiles: <!stage1>
-Depends: gcc-7, ${misc:Depends}
+Depends: gcc-6, ${misc:Depends}
 Architecture: s390 s390x
 Multi-Arch: foreign
 Description: Compiler for Linux on IBM zSeries (meta-package)
  This package depends on gcc 6 of the appropriate architecture for
  Linux on s390 and s390x.
 
-Package: linux-compiler-gcc-7-x86
+Package: linux-compiler-gcc-6-x86
 Build-Profiles: <!stage1>
-Depends: gcc-7, ${misc:Depends}
+Depends: gcc-6, ${misc:Depends}
 Architecture: amd64 i386 x32
 Multi-Arch: foreign
 Description: Compiler for Linux on x86 (meta-package)
