@@ -2,6 +2,7 @@ linux (4.14.7-1~bpo9+1) UNRELEASED; urgency=medium
 
   * Rebuild for stretch-backports:
     - Change ABI number to 0.bpo.2
+    - Revert changes to use gcc-7 compiler, not found in stretch
 
  -- Ben Hutchings <ben@decadent.org.uk>  Fri, 22 Dec 2017 16:31:14 +0000
 
